# meta-open

./: README.md  meta-open.cabal
src/: meta-open.hs
