name:                meta-open
version:             0.1.0.0
synopsis:            Replacement for the "open" command.
description:         
license:             BSD3
license-file:        LICENSE
author:              Cary Robbins
maintainer:          carymrobbins@gmail.com
copyright:           2014
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable meta-open
  main-is:             meta-open.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6 && <4.7
                     , async
                     , conf
                     , directory
                     , filepath
                     , parallel
                     , process
                     , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

